tests/files/type_checker_tests/should_fail/026.cmdr
//Should fail on lesser when types are incompatible
x = 3 < "3";